--- a/techpack.yaml
+++ b/techpack.yaml
@@ -200,7 +200,7 @@ components:
     type: plugin
     installAction:
       type: plugin
-      name: jarrodwatts/claude-hud
+      name: claude-hud@jarrodwatts/claude-hud
 
   # ── Skills ──────────────────────────────────────────────────────────────
   - id: skill-continuous-learning
