Add attribution section to settings.json for commit and PR tracking

--- a/config/settings.json
+++ b/config/settings.json
@@ -8,5 +8,9 @@
   "permissions": {
     "defaultMode": "plan"
   },
-  "alwaysThinkingEnabled": true
+  "alwaysThinkingEnabled": true,
+  "attribution": {
+    "commit": "",
+    "pr": ""
+  }
 }
